<package format="2">
  <name>asr_gazebo_models</name>
  <version>1.0.0</version>
  <description>This package provides our gazebo_models</description>
  <author>Dehmani Souheil, Mayr Matthias, Meißner Pascal</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/asr_gazebo_models</url>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>
